banned installer that contains broken manifest data from running